--- a/estilo.css
+++ b/estilo.css
@@ -2,13 +2,21 @@ body {
     background-color: #F2F5FC;
 }
 
+#logo {
+    position: absolute;
+    width: 110px;
+    height: 38px;
+    left: 20px;
+    top: 40px;
+}
+
 #mensaje {
     /* Posicion y dimension */
-    position: absolute;
-    width: 577px;
-    height: 48px;
+    position: absolute; 
     left: 240px;
-    top: 168px;
+    top: 120px;
+    width: 45%;
+    height: 40%;
 
     /* Fuente */
     font-family: 'Inter', sans-serif;
@@ -17,14 +25,78 @@ body {
     line-height: 150%;    
 
     /* Color y diseño */
-    color: #0A3871;
+    color: #0A3871; 
     background-color: #F2F5FC;
     border: none;
     resize: none;
 }
 
-#logo {
+::placeholder { 
+    color: #0A3871;
+}
+
+#botonesCaja {
     position: absolute;
-    left: 2.5%;
-    top: 5%;
+    left: 240px;
+    top: 70%;
+}
+
+aside {
+    position: absolute;
+    width: 400px;
+    height: 90%;
+    left: 70%;
+    top: 40px;
+    align-items: center;
+    background: #FFFFFF;
+
+    /* sombra */
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+}
+
+#munheco {
+    width: 306px;
+    height: 274px;
+    margin: 50px;
+    margin-top: 90px;
+}
+
+#contenido {
+    text-align: center;     
+}
+
+h1 {
+    font-weight: 700;
+    color: #343A40;
+}
+
+#textoFeed {
+    font-weight: 400;
+    color: #495057;
+}
+
+.btnEstilo {
+    width: 308px;
+    height: 47px;
+    border-radius: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    border-color: #0A3871;
+}
+
+#btnEncriptar {
+    background-color: #0A3871;
+    color: #FFFFFF;
+}
+
+#btnDesencriptar {
+    background-color: #D8DFE8;
+    color: #0A3871;
+}
+
+#misDatos {
+    position: absolute;
+    left: 2%;
+    top: 95%;
 }
