--- a/estilo.css
+++ b/estilo.css
@@ -1,22 +1,39 @@
 body {
+    margin: 0;
     background-color: #F2F5FC;
 }
 
+header {
+    display: inline-block;
+    width: 60em;
+    height: 8em;
+}
+
+aside {
+    margin: 3.5em;
+    float: right;
+    width: 22em;
+    height: 38em;
+    background: #FFFFFF;
+
+    /* sombra */
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+}
+
 #logo {
-    position: absolute;
-    width: 110px;
-    height: 38px;
-    left: 20px;
-    top: 40px;
+    padding: 1.5em 2.5em;    
+}
+
+main{
+    display: inline-block;
 }
 
 #mensaje {
     /* Posicion y dimension */
-    position: absolute; 
-    left: 240px;
-    top: 120px;
-    width: 45%;
-    height: 40%;
+    margin: 0em 0 1em 9em;
+    padding-right: 7em;
+    height: 15em;
 
     /* Fuente */
     font-family: 'Inter', sans-serif;
@@ -36,30 +53,37 @@ body {
 }
 
 #botonesCaja {
-    position: absolute;
-    left: 240px;
-    top: 70%;
+    margin-left: 13em;
+    width: 48.5em;
 }
 
-aside {
-    position: absolute;
-    width: 400px;
-    height: 90%;
-    left: 70%;
-    top: 40px;
-    align-items: center;
-    background: #FFFFFF;
+.botones {
+    padding: 1em 9em;
+    margin-bottom: 0.5em;
+    border-radius: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    border-color: #0A3871;
+}
 
-    /* sombra */
-    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    border-radius: 32px;
+.botones:hover {
+    cursor: pointer;
+}
+
+#btnEncriptar {
+    padding: 1em 10em;
+    background-color: #0A3871;
+    color: #FFFFFF;
+}
+
+#btnDesencriptar {
+    background-color: #D8DFE8;
+    color: #0A3871;
 }
 
 #munheco {
-    width: 306px;
-    height: 274px;
-    margin: 50px;
-    margin-top: 90px;
+    width: 15em;
+    margin: 4.5em 3.5em;
 }
 
 #contenido {
@@ -76,27 +100,6 @@ h1 {
     color: #495057;
 }
 
-.btnEstilo {
-    width: 308px;
-    height: 47px;
-    border-radius: 24px;
-    font-weight: 400;
-    font-size: 16px;
-    border-color: #0A3871;
-}
-
-#btnEncriptar {
-    background-color: #0A3871;
-    color: #FFFFFF;
-}
-
-#btnDesencriptar {
-    background-color: #D8DFE8;
-    color: #0A3871;
-}
-
 #misDatos {
-    position: absolute;
-    left: 2%;
-    top: 95%;
+    margin: 2em;
 }
